[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Multiplayer/GameOverGui.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GameScene/Highscores.gd" type="Script" id=3]
[ext_resource path="res://Resources/Fonts/8bitlimr.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ResourcesV2/Images/RestartInactive.png" type="Texture" id=6]
[ext_resource path="res://ResourcesV2/Images/RestartActive.png" type="Texture" id=7]
[ext_resource path="res://ResourcesV2/Images/ExitActive.png" type="Texture" id=8]
[ext_resource path="res://ResourcesV2/Images/ExitInactive.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.243137, 0.243137, 0.243137, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 10

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 23
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 5 )

[node name="GameOverGui" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="GameOverGui" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameOverGui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 452.5
margin_top = 176.0
margin_right = 875.5
margin_bottom = 552.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restartButton" type="TextureButton" parent="GameOverGui/Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = 45.5
margin_right = 61.0
margin_bottom = 88.5
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitButton" type="TextureButton" parent="GameOverGui/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = 51.5
margin_right = 34.5
margin_bottom = 94.5
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSContainer" type="VBoxContainer" parent="GameOverGui/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -206.5
margin_top = 13.0
margin_right = 208.5
margin_bottom = 146.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreLabel" type="Label" parent="GameOverGui/Panel/HSContainer"]
margin_right = 415.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "HIGHSCORE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreValueLabel" type="Label" parent="GameOverGui/Panel/HSContainer"]
margin_top = 84.0
margin_right = 415.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0"
align = 1
script = ExtResource( 3 )

[node name="CoinearnedLabel" type="Label" parent="GameOverGui/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.5
margin_top = -12.5
margin_right = 15.5
margin_bottom = 12.5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Coin earned:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="richCoinEarnedValue" type="RichTextLabel" parent="GameOverGui/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 34.5
margin_top = -18.0
margin_right = 85.5
margin_bottom = 18.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center][u]0[/u][/center]"
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GameOverGui/Panel/exitButton" to="." method="_on_exitButton_pressed"]
